# cogcat

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: smoke-test.yml
src/cogcat/: __init__.py  cli.py  colormaps.py  display.py  reader.py  render.py
